--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,8 +1,10 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <app-todos></app-todos>
+<mat-toolbar color="primary">
+  <span>{{brand}}</span>
+</mat-toolbar>
+<div class="container">
+  <div class="col s12">
+    Hello
+    <app-todos></app-todos>
+  </div>
 </div>
 <router-outlet></router-outlet>
