--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,10 +1,12 @@
 <mat-toolbar color="primary">
   <span>{{brand}}</span>
 </mat-toolbar>
+
 <div class="container">
-  <div class="col s12">
-    Hello
-    <app-todos></app-todos>
+  <div class="row">
+    <div class="col s12">
+      <app-todos></app-todos>
+    </div>
   </div>
 </div>
 <router-outlet></router-outlet>
