--- a/todo/src/app/todos/todos.component.html
+++ b/todo/src/app/todos/todos.component.html
@@ -1,10 +1,10 @@
 <div class="row">
-  <div class="s12 m3">
-    <input mat-input/>
-    <button (click)="addTodoList('test')" mat-icon-button>
+  <mat-form-field appearance="standard">
+    <input [(ngModel)]="newTodoListTitle" placeholder="Title" matInput/>
+    <button (click)="addTodoList('test')" mat-icon-button matSuffix>
       <mat-icon>add</mat-icon>
     </button>
-  </div>
+  </mat-form-field>
 </div>
 <div class="todos">
   <mat-grid-list gutterSize="3em" cols="3">
