--- a/todo/src/app/todos/todos.component.sass
+++ b/todo/src/app/todos/todos.component.sass
@@ -1,8 +1,27 @@
+.todos
+  flex-wrap: wrap
+
 .todolist
   width: 100%
+  height: auto;
+  margin: 1em
+  max-width: 16em
 
 mat-grid-list
   margin: 2em 2em
 
 input.todo
   border: none
+
+.remove-todo
+  display: none
+
+.todo-item:hover  .remove-todo
+  display: block
+
+.tools
+  margin: 1em 1em;
+
+.finished
+  margin-right: .5em
+
