--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row">
     <div class="col s12">
-      <app-todos></app-todos>
+      <app-todo></app-todo>
     </div>
   </div>
 </div>
