--- a/front-end/src/app/auth/login/login.component.html
+++ b/front-end/src/app/auth/login/login.component.html
@@ -1,13 +1,14 @@
 <form fxLayout="column" fxLayoutAlign="space-between">
   <mat-form-field>
-    <input matInput placeholder="username" [(ngModel)]="username"/>
+    <input matInput placeholder="username" name="username" [(ngModel)]="username"/>
   </mat-form-field>
   <mat-form-field>
-    <input matInput placeholder="Enter your password"
+    <input matInput placeholder="Enter your password" name="username"
      [(ngModel)]="password" [type]="hide ? 'password' : 'text'" />
     <mat-icon matSuffix (click)="hide = !hide">
       {{hide ? 'visibility_off' : 'visibility'}}
     </mat-icon>
   </mat-form-field>
   <button type="submit" (click)="onSubmit()" mat-raised-button>Submit</button>
+  <p>{{ this.authservice.message }}
 </form>
