--- a/front-end/src/app/auth/login/login.component.html
+++ b/front-end/src/app/auth/login/login.component.html
@@ -10,5 +10,5 @@
     </mat-icon>
   </mat-form-field>
   <button type="submit" (click)="onSubmit()" mat-raised-button>Submit</button>
-  <p>{{ this.authservice.message }}
+  <p>{{ this.message }}
 </form>
