--- a/front-end/src/app/auth/register/register.component.html
+++ b/front-end/src/app/auth/register/register.component.html
@@ -1,3 +1,21 @@
-<p>
-  register works!
-</p>
+<form *ngIf="showForm else thankYou" fxLayout="column" fxLayoutAlign="space-between">
+  <mat-form-field>
+    <input matInput placeholder="username" name="username" [(ngModel)]="username" id="username"/>
+    <mat-hint>{{ submittable ? '' : 'this username is already taken' }}</mat-hint>
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Enter your password" name="username"
+     [(ngModel)]="password" [type]="hide ? 'password' : 'text'" />
+    <mat-icon matSuffix (click)="hide = !hide">
+      {{hide ? 'visibility_off' : 'visibility'}}
+    </mat-icon>
+  </mat-form-field>
+  <button type="submit" [disabled]="!submittable" (click)="onSubmit()" mat-raised-button>Submit</button>
+  <p>{{ this.message }}
+</form>
+<ng-template #thankYou>
+  <div class="thank-you">
+    <p>You have succsefully registered</p>
+    <p>Click <a routerLink="/">here</a> to go back</p>
+  </div>
+</ng-template>
